deploy-balbalm-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-balbalm-user
  namespace: devocean
  labels:
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: balbalm-user
    tags.datadoghq.com/version: 1.0.0
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: balbalm-user
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: balbalm-user
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: balbalm-user
        tags.datadoghq.com/version: 1.0.0
        admission.datadoghq.com/enabled: "true"
      annotations:
          ad.datadoghq.com/balbalm-user.logs: '[{"source": "balbalm-python", "service":
            "balbalm-user"}]'
          admission.datadoghq.com/python-lib.version: v2.17.2
    spec:
      containers:
      - env:
        - name: DATABASE_URL
        - name: ENV
          value: prd
        - name: project
          value: devocean
        image: 147997130241.dkr.ecr.ap-northeast-2.amazonaws.com/balbalm/backend-user:0.0.2
        imagePullPolicy: Always
        name: balbalm-user
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            ephemeral-storage: 2Gi
            memory: 512Mi
          requests:
            cpu: 250m
            ephemeral-storage: 2Gi
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
            - NET_ADMIN
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
