svc-balbalm-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-balbalm-user
  namespace: devocean
spec:
  selector:
    app: balbalm-user
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
