ingress-balbalm-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "32503"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/docs"
  generation: 1
  name: ing-balbalm-user
  namespace: devocean
spec:
  ingressClassName: alb
  rules:
  - host: devocean.techsummit.asia
    http:
      paths:
      - backend:
          service:
            name: svc-balbalm-user
            port:
              number: 80
        path: /*
        pathType: Prefix
  tls:
  - hosts:
    - devocean.techsummit.asia
